# cpp_build_project

./: .clang-format  .gitignore  CMakeLists.txt  README.md
examples/one_file/: __cppbuild__.cpp  main.cpp  one_file.build.cpp
include/: build_project.hpp
lib_sources/: build_project.cpp  compiler_interface.cpp  parse_args_get_tools.cpp
